--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hello</title>
     <script>
         if('serviceWorker' in navigator) {
-            //navigator.serviceWorker.register('sw.js')
+            navigator.serviceWorker.register('sw.js')
         }
     </script>
 </head>
